# autd3-doc-v8

./: .gitignore  Dockerfile  book.toml  build.py  katex_macro.txt
.github/actions/setup-mdbook/: action.yml
.github/workflows/: doc.yml
en/: 404.html  document_history.html  index.html  print.html  searchindex.js  searchindex.json
en/Users_Manual/: LICENSE.html  concept.html  controller.html  gain.html  geometry.html  getting_started.html  link.html  modulation.html  release_notes.html  silencer.html  stm.html  users_manual.html  versioning.html
en/Users_Manual/Citation/: citation.html
en/Users_Manual/FAQ/: faq.html
en/Users_Manual/Simulator/: simulator.html
en/Users_Manual/advanced_examples/: advanced_examples.html  custom_gain.html  custom_modulation.html
en/Users_Manual/gain/: bessel.html  cache.html  focus.html  grouped.html  holo.html  null.html  plane.html  transform.html  uniform.html
en/Users_Manual/getting_started/: cpp.html  cs.html  python.html  rust.html  unity.html
en/Users_Manual/link/: simulator.html  soem.html  twincat.html  visualize.html
en/Users_Manual/modulation/: cache.html  fourier.html  radiation.html  rawpcm.html  sine.html  square.html  static.html  transform.html  wav.html
en/Users_Manual/stm/: focus.html  gain.html
jp/: 404.html  about_AUTD3.html  document_history.html  print.html  searchindex.js  searchindex.json
jp/Developer_Manual/: Developer_manual.html  cpu.html  fpga.html  software.html
jp/Developer_Manual/cpu/: develop.html
jp/Developer_Manual/fpga/: clk.html  controller.html  cpu_interface.html  develop.html  memory.html  modulation.html  overview.html  pulse_width_encoder.html  pwm.html  silencer.html  stm.html  sync.html  time_cnt.html
jp/Theory/: linear.html  multi-freq.html  phasedarray.html  pwm.html  radiation_pressure.html  resolution.html  theory.html
jp/Theory/holo/: apo.html  back_prop.html  evp.html  fourier.html  greedy.html  holo.html  nlsp.html  partitioning.html  sdp.html
jp/Users_Manual/: LICENSE.html  concept.html  controller.html  fan.html  gain.html  geometry.html  getting_started.html  link.html  modulation.html  release_notes.html  sampling_config.html  segment.html  silencer.html  stm.html  users_manual.html  versioning.html
jp/Users_Manual/Citation/: citation.html
jp/Users_Manual/FAQ/: faq.html
jp/Users_Manual/Simulator/: simulator.html
jp/Users_Manual/advanced/: advanced.html  custom_gain.html  custom_modulation.html  debug_settings.html  logging.html  pulse_width_encoder.html  ultrasound_freq.html
jp/Users_Manual/gain/: bessel.html  cache.html  custom.html  focus.html  grouped.html  holo.html  null.html  plane.html  transform.html  uniform.html
jp/Users_Manual/getting_started/: cpp.html  cs.html  python.html  rust.html  unity.html
jp/Users_Manual/link/: simulator.html  soem.html  twincat.html  visualize.html
jp/Users_Manual/modulation/: cache.html  csv.html  custom.html  wav.html  (+8 more)
samples/cpp/: CMakeLists.txt  main.cpp
samples/cs/: AUTD3Sharp-Sample.csproj  Program.cs  cs.csproj
samples/python/: main.py
src/codes/Users_Manual/Tutorial/: CMakeLists.txt  Program.cs  main.cpp  main.py  main.rs
src/en/: SUMMARY.md  document_history.md
src/jp/: SUMMARY.md  document_history.md
theme/: lightbox-plus-jquery.min.js
thirdparties/: Cargo.toml
tools/: cpp_test.py  cs_test.py  python_test.py  rs_test.py
(+535 files in other folders)
