[package]
name = "thirdparties"
version = "23.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autd3 = { version = "24.1.0" }
autd3-gain-holo = { version = "24.1.0" }
autd3-link-simulator = { version = "24.1.0" }
autd3-link-visualizer = { version = "24.0.0" }
autd3-link-soem = { version = "24.1.0", features = ["remote"] }
autd3-link-twincat = { version = "24.1.0", features = ["remote"] }
autd3-modulation-audio-file = { version = "24.1.0" }
tokio = { version = "1.35.0", features = ["full"] }
